# mcp-server-any-openapi

./: Dockerfile  README.md  pyproject.toml
src/mcp_server_any_openapi/: __init__.py  server.py
